--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,35 @@
     <string name="ten_can_bo">Tên Cán Bộ</string>
     <string name="connect_string">-</string>
     <string name="chuc_vu">Chức vụ</string>
+    <string name="hoc_sinh">Học sinh</string>
+    <string name="_2">2</string>
+    <string name="_1">1</string>
+    <string name="subject_name">Tên môn</string>
+    <string name="thoi_khoa_bieu">Thời khóa biểu</string>
+    <string name="ten_hoc_sinh">Tên học sinh</string>
+    <string name="ten_lop">Tên lớp</string>
+    <string name="khach">Khách</string>
+    <string name="tim_duong_di">Tìm đường đi</string>
+    <string name="gap_can_bo">Gặp cán bộ</string>
+    <string name="k_nh_ch_o_qu_kh_ch">Kính chào quý khách</string>
+    <string name="thu">Thứ</string>
+    <string name="tiet">Tiết</string>
+    <string name="mon">Môn</string>
+    <string name="lop">Lớp</string>
+    <string name="thoi_gian">Thời gian</string>
+    <string name="noi_dung">Nội dung</string>
+    <string name="dia_diem">Địa điểm</string>
+    <string name="to_chuc">Tổ chức</string>
+    <string name="hd_di_chuyen">Hướng dẫn di chuyển</string>
+    <string name="gap_mat">Gặp mặt cán bộ</string>
+    <string name="dia_diem_hien_tai">Địa điểm hiện tại:</string>
+    <string name="destination">Vị trí cần tới</string>
+    <string name="mo_ta">* Mô tả</string>
+    <string name="demo">Demo</string>
+    <string name="can_bo_can_gap">Cán bộ cần gặp</string>
+    <string name="thong_bao">* Thông báo</string>
+    <string name="thong_tin">* Thông tin</string>
+    <string name="back"><u>Back</u>></string>
+    <string name="ten_mon">Tên môn</string>
+    <string name="_6a1">6A1</string>
 </resources>
