--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="ten_mon">Tên môn</string>
     <string name="_6a1">6A1</string>
     <string name="tai_du_lieu">Đang tải dữ liệu vui lòng chờ...</string>
+    <string name="luu_thong_tin_dn">Lưu thông tin đăng nhập</string>
 </resources>
